NO-ISSUE: phase 2 device config hooks add draft api
