# api/v1alpha1/openapi.yaml
@@ -2181,6 +2181,98 @@ components:
         - "ResourceAlertSeverityTypeWarning"
         - "ResourceAlertSeverityTypeCritical"
         - "ResourceAlertSeverityTypeInfo"
+    DeviceConfigHook:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string 
+        fileOperations:
+          type: array
+          items:
+            $ref: '#/components/schemas/FileOperation'
+        actions:
+          type: array
+          items:
+            $ref: '#/components/schemas/ConfigHookAction'
+        fileWatchPath:
+          type: string
+          description: 'The path to monitor for changes in configuration files. This path can point to either a specific file or an entire directory.'
+      required:
+        - name
+        - description
+        - fileOperations
+        - actions
+        - fileWatchPath
+    FileOperation:
+      type: object
+      properties:
+        operation:
+          type: string
+          description: 'The type of operation that was observed on the file.'
+          enum:
+            - "Create"
+            - "Remove"
+            - "Update"
+            - "Delete"
+            - "ChangeOwner"
+          x-enum-varnames:
+            - "FileOperationCreate"
+            - "FileOperationRemove"
+            - "FileOperationUpdate"
+            - "FileOperationDelete"
+            - "FileOperationChangeOwner"
+    ConfigHookAction:
+      type: object
+      oneOf:
+        - $ref: '#/components/schemas/ConfigHookActionSystemd'
+        - $ref: '#/components/schemas/ConfigHookActionExecutable'
+      description: 'An action to perform on configuration changes, either a systemd action or an executable action.'
+    ConfigHookActionSystemd:
+      type: object
+      properties:
+        unitName:
+          type: string
+          description: 'The name of the systemd unit to act on.'
+        action:
+          type: string
+          enum:
+            - "Enable"
+            - "Disable"
+            - "Start"
+            - "Stop"
+            - "Restart"
+            - "Reload"
+          x-enum-varnames:
+            - "ConfigHookActionSystemdEnable"
+            - "ConfigHookActionSystemdDisable"
+            - "ConfigHookActionSystemdStart"
+            - "ConfigHookActionSystemdStop"
+            - "ConfigHookActionSystemdRestart"
+            - "ConfigHookActionSystemdReload"
+          description: 'The systemd action to perform on the specified unit.'
+          required:
+            - unitName
+            - action
+    ConfigHookActionExecutable:
+      type: object
+      properties:
+        filePath:
+          type: string
+          description: 'The file path of the executable to be run.'
+        params:
+          type: array
+          items:
+            type: string
+          description: 'A list of parameters to be passed to the executable.'
+        workingDirectory:
+          type: string
+          description: 'The directory in which the executable will run.'
+      required:
+        - filePath
+        - params
+        - workingDirectory
     DeviceList:
       type: object
       properties:
@@ -2729,7 +2821,7 @@ components:
               items:
                 type: string
         config:
-          type: string
+          $ref: '#/components/schemas/DeviceConfigSpec'
         systemd:
           type: object
           properties:
@@ -2747,6 +2839,17 @@ components:
 
       required:
         - renderedVersion
+    DeviceConfigSpec:
+      type: object
+      properties:
+        data:
+          type: string
+          description: 'The configuration data.'
+        hooks:
+          type: array
+          items:
+            $ref: '#/components/schemas/DeviceConfigHook'
+          description: 'A list of hooks to execute based on configuration changes.'
     DeviceSpec:
       type: object
       properties:
